added more notebooks

--- a/02b_parse_all.ipynb
+++ b/02b_parse_all.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "4c237ad1-81cc-4e01-893b-59e4cefb5a4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/derekschwabe/.pyenv/versions/3.8.5/envs/congress-bills-data-3.8.5/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "566d1bc4-50de-4540-a3ec-ab576925ae2c",
    "metadata": {},
    "outputs": [],
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "649b60e9-376c-409c-bdb7-7da9212f9a24",
    "metadata": {},
    "outputs": [
@@ -56,7 +65,7 @@
        "33089"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "d929b0a8-144e-4a0d-8ab5-49cb52533966",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f24b263e692b4a5b801445f31bc8306a",
+       "model_id": "ca559027a0ea4b86a1c71d57293b2d07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "378f2460-3532-435d-87a1-ac590cffe696",
    "metadata": {},
    "outputs": [
@@ -118,7 +127,7 @@
        "1161"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "c5164ddd-3b3d-49a4-9a3c-25dd8ba4f490",
    "metadata": {},
    "outputs": [],
@@ -143,10 +152,11 @@
     "    # read the json\n",
     "    with open(file_name) as f:\n",
     "        bill_json = json.load(f)\n",
+    "        congress = bill_json['congress']\n",
     "        bill_number = bill_json['number']\n",
-    "        bill_url = f'https://www.congress.gov/bill/115th-congress/house-bill/{ bill_number }/text?r=1&s=2'\n",
+    "        bill_url = f'https://www.congress.gov/bill/{ congress }th-congress/house-bill/{ bill_number }/text?r=1&s=2&format=txt'\n",
     "        bills_data.append({\n",
-    "            'congress': bill_json['congress'],\n",
+    "            'congress': congress,\n",
     "            'bill_number': bill_number,\n",
     "            'url': bill_url\n",
     "        })\n",
@@ -156,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "8734b0cf-67a3-4a08-99a4-3835eaea6958",
    "metadata": {},
    "outputs": [
@@ -191,31 +201,31 @@
        "      <th>0</th>\n",
        "      <td>111</td>\n",
        "      <td>5014</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>https://www.congress.gov/bill/111th-congress/h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>111</td>\n",
        "      <td>5470</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>https://www.congress.gov/bill/111th-congress/h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>111</td>\n",
        "      <td>2004</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>https://www.congress.gov/bill/111th-congress/h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>111</td>\n",
        "      <td>3114</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>https://www.congress.gov/bill/111th-congress/h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>111</td>\n",
        "      <td>3326</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>https://www.congress.gov/bill/111th-congress/h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -260,11 +270,11 @@
       ],
       "text/plain": [
        "     congress bill_number                                                url\n",
-       "0         111        5014  https://www.congress.gov/bill/115th-congress/h...\n",
-       "1         111        5470  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2         111        2004  https://www.congress.gov/bill/115th-congress/h...\n",
-       "3         111        3114  https://www.congress.gov/bill/115th-congress/h...\n",
-       "4         111        3326  https://www.congress.gov/bill/115th-congress/h...\n",
+       "0         111        5014  https://www.congress.gov/bill/111th-congress/h...\n",
+       "1         111        5470  https://www.congress.gov/bill/111th-congress/h...\n",
+       "2         111        2004  https://www.congress.gov/bill/111th-congress/h...\n",
+       "3         111        3114  https://www.congress.gov/bill/111th-congress/h...\n",
+       "4         111        3326  https://www.congress.gov/bill/111th-congress/h...\n",
        "...       ...         ...                                                ...\n",
        "1156      115        6414  https://www.congress.gov/bill/115th-congress/h...\n",
        "1157      115        2611  https://www.congress.gov/bill/115th-congress/h...\n",
@@ -275,7 +285,7 @@
        "[1161 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "8b4b317e-8263-4332-b31c-cc077deb7552",
    "metadata": {},
    "outputs": [],
