submitting final project notebooks

--- a/02a_parse_115.ipynb
+++ b/02a_parse_115.ipynb
@@ -5,11 +5,9 @@
    "id": "361ef643-4ea1-41ce-8d0a-32e276e270e7",
    "metadata": {},
    "source": [
-    "# Explore 115th Congress\n",
+    "# Part 2a: Exploring 115th Congress\n",
     "\n",
-    "I'm looking through the patterns for 115th so that I can apply them to 111-114.\n",
-    "\n",
-    "See 02b_xx to see the full output of 111-115"
+    "I used this notebook as an initial testing ground for getting to know the vast .json files available one ach bill. I look through the patterns for just one congress, the 115th, so that I can apply what I learn to my analysis of the others."
    ]
   },
   {
